--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,13 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "codecasts/confee-api",
+    "description": "Confee Conference Hub.",
+    "keywords": ["confee", "laravel"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*"
+        "laravel/framework": "5.3.*",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -20,7 +21,7 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "Confee\\": "app/"
         }
     },
     "autoload-dev": {
