--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "artesaos/migrator": "^1.3",
         "laravel/framework": "5.3.*",
         "predis/predis": "^1.1"
     },
