--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,14 @@
     "keywords": ["confee", "laravel"],
     "license": "MIT",
     "type": "project",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=5.6.4",
         "artesaos/migrator": "^1.3",
         "laravel/framework": "5.3.*",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "tymon/jwt-auth": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
